[package]
name = "artha-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.0", features = ["rand_core", "serde", "pkcs8"] }
rand = "0.8"
libp2p = { version = "0.55", features = [
    "noise",
    "yamux",
    "mdns",
    "floodsub",
    "tokio",
    "tcp",
    "macros"
] }
env_logger = "0.10"
log = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
thiserror = "1.0"
anyhow = "1.0"
# Additional dependencies for security features
blake3 = "1.5"
ring = "0.17"
rand_core = "0.6"
zeroize = "1.6"
secrecy = "0.8"
base64 = "0.21"
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
backoff = "0.4"
crossbeam-channel = "0.5"
dashmap = "5.5"
parking_lot = "0.12"
rayon = "1.8"
bincode = "1.3"
